--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,44 @@
+# Node.js / Express
 node_modules/
+npm-debug.log
+.env
+.DS_Store
+coverage/
+dist/
+
+# React
+build/
+node_modules/
+*.log
+*.log.*
+*.log-*
+*.pid
+*.seed
+*.pid.lock
+*.socket
+*.pid.nr
+*.pid.lock.nr
+yarn-error.log
+.pnp.*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
